linting, autowired constructors, refactoring